--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -22,7 +22,7 @@
         <script src="/public/lib/calendar/zane-calendar.min.js"></script>
         <script src="/public/js/vue-filters.js"></script>
         <script src="/public/js/vue-components.js"></script>
-        <script src="/public/js/web-report-default.min.js"></script>
+        <!-- <script src="/public/js/web-report-default.min.js"></script>
         <script>
             Performance({
                 domain: 'http://localhost:7001/api/v1/report/web',
@@ -30,7 +30,7 @@
                     appId: 'jXdEaTB1606209390234'
                 }
             });
-        </script>
+        </script> -->
     </head>
     <body>
         <div id="loading"></div>
