--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -6,6 +6,13 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: sans-serif;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 /*设置字体*/
 @font-face {
     font-family: 'Montserrat';
@@ -56,11 +63,15 @@ button {
 }
 
 body {
-    position: relative;
-    font-family: 'Montserrat', Helvetica, STHeiTi, "Helvetica Neue",  Arial, sans-serif;
+    margin: 0;
+    font-family: "Montserrat", Helvetica, STHeiTi, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
     line-height: 1.5;
-    font-size: 14px;
-    color: #70727C;
+    color: #212529;
+    text-align: left;
+    position: relative;
+    line-height: 1.5;
     background-color: #f9fafb;
     -webkit-text-size-adjust: none;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
